fix log out function

--- a/WebContent/js/directives/header/header-notification/header-notification.html
+++ b/WebContent/js/directives/header/header-notification/header-notification.html
@@ -1,6 +1,6 @@
 <ul class="nav navbar-top-links navbar-right">
     <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="/#">
             <i class="fa fa-envelope fa-fw"></i>  <i class="fa fa-caret-down"></i>
         </a>
         <ul class="dropdown-menu dropdown-messages">
@@ -51,7 +51,7 @@
     </li>
     <!-- /.dropdown -->
     <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="/#">
             <i class="fa fa-tasks fa-fw"></i>  <i class="fa fa-caret-down"></i>
         </a>
         <ul class="dropdown-menu dropdown-tasks">
@@ -130,7 +130,7 @@
     </li>
     <!-- /.dropdown -->
     <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="/#"> 
             <i class="fa fa-bell fa-fw"></i>  <i class="fa fa-caret-down"></i>
         </a>
         <ul class="dropdown-menu dropdown-alerts">
@@ -190,7 +190,7 @@
     </li>
     <!-- /.dropdown -->
     <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="/#">
             <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
         </a>
         <ul class="dropdown-menu dropdown-user">
@@ -200,7 +200,7 @@
             </li>
             <li><a href="http://www.strapui.com/"><i class="fa fa-eye fa-fw"></i> Premium Angular Themes</a></li>
             <li class="divider"></li>
-            <li><a ui-sref="login"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+            <li><a ng-click="logout()" href><i class="fa fa-sign-out fa-fw"></i> Logout</a>
             </li>
         </ul>
         <!-- /.dropdown-user -->
