--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -26,11 +26,11 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/angular-loading-bar/0.8.0/loading-bar.min.css" rel="stylesheet">    
 
     <!-- Theme CSS -->
-    <link href="styles/sb-admin-2.css" rel="stylesheet">
-    <link href="styles/main.css" rel="stylesheet" >
+    <link href="css/sb-admin-2.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet" >
     
     <!-- Directive Timeline CSS -->
-    <link href="styles/timeline.css" rel="stylesheet"> 
+    <link href="css/timeline.css" rel="stylesheet"> 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -77,7 +77,7 @@
     <script src="js/sb-admin-2.js"></script>
     <script src="libs/Chart.js/Chart.min.js"></script>
     <!-- Our Website Javascripts -->
-  	<script src="scripts/app.js"></script> 	
+  	<script src="js/app.js"></script> 	  	
 
 </body>
 
