--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -71,7 +71,10 @@
 
     <!-- Morris Charts JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
+    
+    <!-- underscore -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>    
 
     <!-- Custom Theme JavaScript -->
     <script src="js/sb-admin-2.js"></script>
